  [28896] strncmp-avx2-rtm and wcsncmp-avx2-rtm fallback on non-rtm
    variants when avoiding overflow
  [29304] libc: mq_timedreceive does not handle 64 bit syscall return
    correct for !__ASSUME_TIME64_SYSCALLS
  [29528] elf: Call __libc_early_init for reused namespaces
  [29611] Optimized AVX2 string functions unconditionally use BMI2 instructions


Version 2.32

Major new features:

* Unicode 13.0.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 13.0.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* New locale added: ckb_IQ (Kurdish/Sorani spoken in Iraq)

* Support for Synopsys ARC HS cores (ARCv2 ISA) running Linux has been
  added. This port requires at least binutils-2.32, gcc-8.3 and Linux-5.1.
  Three ABIs are supported:

     - arc-linux-gnu
     - arc-linux-gnuhf
     - arceb-linux-gnu

  The arc* ABIs are little-endian while arceb is big-endian.  All ABIs use
  64-bit time (y2038 safe) and 64-bit file offsets (LFS default).

* The GNU C Library now loads audit modules listed in the DT_AUDIT and
  DT_DEPAUDIT dynamic section entries of the main executable.

* powerpc64le supports IEEE128 long double libm/libc redirects when
  using -mabi=ieeelongdouble to compile C code on supported GCC
  toolchains.  It is recommended to use GCC 8 or newer when testing
  this option.

* To help detect buffer overflows and other out-of-bounds accesses
  several APIs have been annotated with GCC 'access' attribute.  This
  should help GCC 10 issue better warnings.

* On Linux, functions pthread_attr_setsigmask_np and
  pthread_attr_getsigmask_np have been added.  They allow applications
  to specify the signal mask of a thread created with pthread_create.

* The GNU C Library now provides the header file <sys/single_threaded.h>
  which declares the variable __libc_single_threaded.  Applications are
  encouraged to use this variable for single-thread optimizations,